# rom-operator-inference-Python3

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test_src.yml  test_style.yml  tests.yml
docs/: literature.bib
docs/source/: index.md
docs/source/contributing/: how_to_contribute.md  testing.md
docs/source/opinf/: changelog.md  installation.md
src/opinf/: __init__.py
src/opinf/basis/: _pod.py
src/opinf/ddt/: _base.py
src/opinf/lstsq/: _tikhonov.py
src/opinf/models/mono/: _nonparametric.py  _parametric.py
src/opinf/models/multi/: _base.py
src/opinf/operators/: _affine.py  _base.py  _nonparametric.py  _polynomial_operator.py
src/opinf/operators/multi/: _base.py  _nonparametric.py
src/rom_operator_inference/: __init__.py
src/rom_operator_inference/_core/: _inferred.py
src/rom_operator_inference/_core/_interpolate/: _base.py
src/rom_operator_inference/pre/: _shift_scale.py
tests/_core/: __init__.py  test_base.py  test_inferred.py  test_init.py  test_intrusive.py
tests/_core/_affine/: test_base.py  test_inferred.py  test_intrusive.py
tests/_core/_interpolate/: test_inferred.py
tests/basis/: test_pod.py
tests/lstsq/: test_tikhonov.py
tests/operators/: test_affine.py  test_nonparametric.py  test_poly_operator.py
tests/post/: test_errors.py
tests/pre/: test_basis.py  test_finite_difference.py  test_reprojection.py  test_shift_scale.py
tests/regression/: test_basics.py
tests/utils/: test_kronecker.py
