[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opinf"
description = "Operator Inference for data-driven model reduction of dynamical systems."
dynamic = ["version"]
authors = [
    { name = "Shane A. McQuarrie, Karen E. Willcox, and OpInf Contributors", email = "shanemcq@mathematics.byu.edu" },
]
maintainers = [
    { name = "Shane A. McQuarrie", email = "shanemcq@mathematics.byu.edu" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
    "operator inference",
    "model reduction",
    "data-driven model reduction",
    "scientific machine learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "h5py>=3.9.0",
    "numpy>=1.23.2",
    "scipy>=1.10.1",
    "matplotlib>=3.7",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "bibtexparser>=2.0.0b7",
    "black==24.4.2",
    "flake8==7.0.0",
    "jupyterlab",
    "notebook",
    "pandas",
    "pre-commit>=3.7.1",
    "pytest",
    "pytest-cov",
    "tox>=4",
]

[project.urls]
homepage = "https://operator-inference.github.io/opinf/source/index.html"
documentation = "https://operator-inference.github.io/opinf/source/index.html"
repository = "https://github.com/operator-inference/opinf.git"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "opinf.__version__" }
